--- a/pcgserver/app/templates/index.html
+++ b/pcgserver/app/templates/index.html
@@ -16,17 +16,29 @@
             // Connect to the Socket.IO server.
             // The connection URL has the following format, relative to the current page:
             //     http[s]://<domain>:<port>[/<namespace>]
-            var socket = io(namespace);
+            var socket = io();
 
             // Event handler for new connections.
             // The callback function is invoked when a connection with the
             // server is established.
-            socket.on('connect', function() {
-                socket.emit('test', {data: 'I\'m connected!'});
-            });
+            // socket.on('connect', function() {
+            //     socket.emit('test', {data: 'I\'m connected!'});
+            // });
 
 
             socket.on('connect', function(response) {
+                socket.emit('test1', {data: 'I\'m connected!'});
+            });
+
+            socket.on('test2', function(response) {
+                console.log(response);
+            });
+
+            socket.on('test3', function(response) {
+                console.log(response);
+            });            
+
+            socket.on('test4', function(response) {
                 console.log(response);
             });            
 
